# CMake-git-submodule-example

./: CMakeLists.txt  README.md
data/: items.csv  users.csv
src/: CSVParser.h  Definitions.h  main.cpp
src/ProjectClasses/: Entry.cpp  Entry.h  ItemEntry.cpp  ItemEntry.h  UserEntry.cpp  UserEntry.h
src/Utils/: LinearAlgebra.h  Metrics.h  MyEigenFuncs.cpp  MyEigenFuncs.cpp.autosave  MyEigenFuncs.h
